--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -180,5 +180,8 @@
 
   	</div><!--/row-fluid-->    
 	</div>
-</div><!--/container-->		
+</div><!--/container-->
+<script type="text/javascript">
+$(".collapse").collapse('hide');
+</script>
 <!--=== End Content Part ===-->
