--- a/app/views/profiles/_add_education.html.erb
+++ b/app/views/profiles/_add_education.html.erb
@@ -12,7 +12,7 @@
       <div class="controls form-inline">
         <% year = Date.today.year %>
         <%= p.input_field :from, collection: (year-20)..year, style: "width: 100px" %> - 
-        <%= p.input_field :from, collection: (year-20)..year, style: "width: 100px" %>
+        <%= p.input_field :to, collection: (year-20)..year, style: "width: 100px" %>
       </div>
     </div>
 
