--- a/app/views/profiles/_add_skills.html.erb
+++ b/app/views/profiles/_add_skills.html.erb
@@ -1,4 +1,4 @@
-<div id="add-skill" style="display:none;">
+<div id="add-skill" class="fade-section" style="display:none;">
   <%= simple_form_for @skill, remote: true, :html => {:method => :post, :class => 'form-horizontal' } do |p| %>
     <div class="alert alert-danger hide">
       <span></span>
