--- a/app/views/profiles/_add_other_exp.html.erb
+++ b/app/views/profiles/_add_other_exp.html.erb
@@ -1,4 +1,4 @@
-<div id="add-other-exp" class="collapse">
+<div id="add-other-exp" class="fade-section">
   <%= simple_form_for @other_experience, remote: true, :html => {:method => :post, :class => 'form-horizontal' } do |p| %>
     <div class="alert alert-danger hide">
       <span></span>
@@ -13,7 +13,7 @@
     </div>
     <div class="controls form-inline">
       <%= p.submit "Add", :class => "btn btn-success" %>
-      <a class="btn" onclick="$('#add-other-exp').collapse('hide');">Cancel</a>
+      <a class="btn" onclick="$('#add-other-exp').fadeOut('fast');">Cancel</a>
     </div>
   <% end %>
 </div>
