--- a/app/views/profiles/_edit_education.html.erb
+++ b/app/views/profiles/_edit_education.html.erb
@@ -1,4 +1,4 @@
-<div id="education-<%= education.id %>" class="collapse">
+<div id="education-<%= education.id %>" class="fade-section">
   <%= simple_form_for education, remote: true, :html => {:method => :put, :class => 'form-horizontal' } do |p| %>
     <div class="alert alert-danger hide">
       <span></span>
@@ -25,7 +25,7 @@
     </div>
     <div class="controls form-inline">
       <%= p.submit "Save", :class => "btn btn-success" %>
-      <a class="btn" onclick="$('#education-<%= education.id %>').collapse('hide');">Cancel</a>
+      <a class="btn" onclick="$('#education-<%= education.id %>').fadeOut('fast');">Cancel</a>
     </div>
   <% end %>
 </div>
