--- a/app/views/preppee/_profile_sidebar.html.erb
+++ b/app/views/preppee/_profile_sidebar.html.erb
@@ -6,7 +6,7 @@
 }
 </style>
 <!-- My Profile -->
-<div class="margin-bottom-20">
+<div class="margin-bottom-20 white-background">
 	<br>
   <div class="row-fluid">
     <div class="span6">
