--- a/app/views/shared/_profile_sidebar.html.erb
+++ b/app/views/shared/_profile_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="span3 white-background">
+<div class="span3">
 	<!-- Left Panel -->
   <ul class="nav nav-pills nav-stacked">
 		<li class="<%= profile_sidebar_class('registrations') %>">
