--- a/app/views/prepper/_profile_sidebar.html.erb
+++ b/app/views/prepper/_profile_sidebar.html.erb
@@ -6,11 +6,11 @@
 }
 </style>
 <!-- My Profile -->
-<div class="margin-bottom-20">
+<div class="margin-bottom-5">
 	<br>
 	<div class="row-fluid white-background">
   	<div class="span6">
-      <div class="profile-img-wrapper">
+      <div class="profile-img-wrapper img-width-120">
         <%= image_tag current_user.profile.photo.url(:medium) %>
       </div>
     </div>
