--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Resend confirmation instructions</h2>
+<div class="container">
+	<div class="row-fluid">
+	<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post, :class => 'log-page' }) do |f| %>
+		<h3>Resend confirmation instructions</h3>
+	  <%= f.error_notification %>
+	  <%= f.full_error :confirmation_token %>
 
-<%= simple_form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
+	  <div class="form-inputs">
+	    <%= f.input :email, :required => true, :autofocus => true %>
+	  </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-  </div>
+	  <div class="form-inline">
+	    <%= f.button :submit, "Resend confirmation instructions" %>
+	  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+	  <%= render "devise/shared/links" %>
+	<% end %>
+	</div>
+</div>
