--- a/app/views/prepper/welcome.html.erb
+++ b/app/views/prepper/welcome.html.erb
@@ -16,7 +16,7 @@
 			<div style="padding: 10px; border: 1px solid #ccc; display: block; height: 150px">
 				<div class="row-fluid">
 					<div class="span6">
-						<div class="profile-img-wrapper">
+						<div class="profile-img-wrapper img-width-120">
 							<%= image_tag current_user.profile.photo.url(:medium) %>
 						</div>
 					</div>
