--- a/app/views/profiles/_edit_overview.html.erb
+++ b/app/views/profiles/_edit_overview.html.erb
@@ -2,7 +2,7 @@
   <%= simple_form_for @profile, :url => profile_path(@profile), :html => {:method => :put, :class => 'form-horizontal' } do |p| %>
     <div class="modal-header">
       <a class="close" data-dismiss="modal">&#215;</a>
-      <h3>Apply for Prep</h3>
+      <h3>Profile overview</h3>
     </div>
     <div class="modal-body">
       <%= p.hidden_field :token %>
