--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -14,7 +14,7 @@
 	        <%= p.label :portrait, 'Portrait (Optional)', :class => 'control-label' %>
 	        <div class="controls">
 	        	<div class="pull-left">
-		        	<div class="profile-img-wrapper">
+		        	<div class="profile-img-wrapper img-width-120">
 		        		<span></span>
 		          	<img id="photo" src="/assets/blank_user.jpg">
 		          </div>
