--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -39,7 +39,7 @@
                       <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                      <li><%= link_to '<i class="icon-user"></i> Edit Profile'.html_safe, edit_user_registration_path %></li>
+                      <li><%= link_to '<i class="icon-user"></i> Edit Profile'.html_safe, edit_profile_path(current_user.profile.token) %></li>
                       <li><%= link_to '<i class="icon-signout"></i> Logout'.html_safe, destroy_user_session_path, :method=>'delete' %></li>
                     </ul>
                     <b class="caret-out"></b>
