--- a/app/views/preps/new.html.erb
+++ b/app/views/preps/new.html.erb
@@ -1,28 +1,15 @@
 <!--=== Content Part ===-->
 <div class="body">
-	<div class="breadcrumbs margin-bottom-50">
-    	<div class="container">
-          <h1 class="color-green pull-left">Create New Prep</h1>
-          <ul class="pull-right breadcrumb">
-              <li>
-                <a href="/preppee/open_request">Preppee</a> <span class="divider">/</span>
-              </li>
-              <li class="active">New Prep</li>
-          </ul>
-      </div><!--/container-->
-    </div><!--/breadcrumbs-->
-
 	<div class="container">		
-    <div class="span8 center">
-		<div class="row-fluid margin-bottom-10">
+    <div class="span8 center white-background">
+		<div class="row-fluid margin-20">
     	<%= simple_form_for(@prep, :url => preps_path, :html => {:method => :post, :class => 'form-vertical prep-form' }) do |f| %>
 			  <%= f.error_notification %>
         <div class="controls">
           <%= f.hidden_field :prep_type %>
           
-          <div style="border: 1px solid #eee;">
-            <%= f.input_field :job_type_id, collection: JobType.all ,as: :radio_buttons, :item_wrapper_class => 'inline' %>
-          </div>
+          <%= label_tag :job_type_id, "Industry", :style => 'font-weight:bold' %>
+          <%= f.input_field :job_type_id, collection: JobType.all %>
           
           <%= label_tag :product_id, "Products", :style => 'font-weight:bold' %>
           <%= f.input_field :product_id, collection: Product.where(product_type: 0), prompt: "Please select product" %>
