--- a/app/views/prep_applications/index.html.erb
+++ b/app/views/prep_applications/index.html.erb
@@ -1,44 +1,47 @@
 <div class="container">		
-	<div class="span8 center">
-		<div class="row-fluid">
-			<!-- Search Results -->
-			<div class="span12">
-				<br>
-				<%= link_to "<< Back", :back %>
-				<%= render "layouts/messages" %>
-				<% @prep.prep_applications.each do |p| %>
-					<% next if p.status == "declined" %>
-					<% prepper = p.user %>
-			    <div class="row-fluid">
-			      <div class="booking-blocks">
-			        <div class="span3 pull-left booking-img text-center">
-		            <img src="/assets/blank_user.jpg" alt="">
-		            <ul class="unstyled inline">
-		               <li><span class="rating-static rating-45"></span></li>
-		               <li><i class="icon-star"></i></li>
-		               <li><i class="icon-star"></i></li>
-		               <li><i class="icon-star"></i></li>
-		               <li><i class="icon-star"></i></li>
-		               <li><i class="icon-star-empty"></i></li>
-		            </ul>
-			        </div>
-			        <!-- Prepper Profile -->
-			        <div class="span8" style="overflow:hidden;">
-			        	<h4><%= link_to prepper.fullname, prep_prep_application_path(@prep.id, p.id) %></h4>
-		            <h5>
-		            	<%= prepper.profile.title %>
-		            </h5>
-		            <ul class="unstyled inline">
-									<li>0 minutes</li>
-									<li> / <%= prepper.profile.address %></li>
-			          </ul>
-			          <%= link_to 'View Full Application', prep_prep_application_path(@prep.id, p.id) %> | 
-								<%= link_to 'Decline', prep_prep_application_decline_path(@prep.id, p.id) %>
-				      </div>
+	
+	<div class="row-fluid">
+		<!-- Search Results -->
+		<div class="span8">
+			<br>
+			<%= link_to "<< Back", :back %>
+			<%= render "layouts/messages" %>
+			<% @prep.prep_applications.each do |p| %>
+				<% next if p.status == "declined" %>
+				<% prepper = p.user %>
+		    <div class="row-fluid">
+		      <div class="booking-blocks">
+		        <div class="span3 pull-left booking-img text-center">
+	            <img src="/assets/blank_user.jpg" alt="">
+	            <ul class="unstyled inline">
+	               <li><span class="rating-static rating-45"></span></li>
+	               <li><i class="icon-star"></i></li>
+	               <li><i class="icon-star"></i></li>
+	               <li><i class="icon-star"></i></li>
+	               <li><i class="icon-star"></i></li>
+	               <li><i class="icon-star-empty"></i></li>
+	            </ul>
 		        </div>
-			    </div>
-		    <% end %>
-			</div><!--/span8-->
-		</div><!--/row-fluid-->
-	</div><!-- /span9 -->
+		        <!-- Prepper Profile -->
+		        <div class="span8" style="overflow:hidden;">
+		        	<h4><%= link_to prepper.fullname, prep_prep_application_path(@prep.id, p.id) %></h4>
+	            <h5>
+	            	<%= prepper.profile.title %>
+	            </h5>
+	            <ul class="unstyled inline">
+								<li>0 minutes</li>
+								<li> / <%= prepper.profile.address %></li>
+		          </ul>
+		          <%= link_to 'View Full Application', prep_prep_application_path(@prep.id, p.id) %> | 
+							<%= link_to 'Decline', prep_prep_application_decline_path(@prep.id, p.id) %>
+			      </div>
+	        </div>
+		    </div>
+	    <% end %>
+		</div><!--/span8-->
+		<div class="span3">
+	    <%= render "preppee/profile_sidebar" %><!-- :locals => { member: Member.new(), group_id: @group.id } -->
+		</div><!--/span3-->
+	</div><!--/row-fluid-->
+	
 </div><!--/container-->
